CBD-4985: Refactor JVM shared performer code into a library CBD-4986: Add Scala performer CBD-4987: Add Kotlin performer